unpackaged/main/default/objects/Case/fields/Principal_Balance_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Principal_Balance_Remaining__c</fullName>
    <formula>Funded_Amount__c - Opportunity__r.Principal_Paid_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Principal Balance Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>