unpackaged/main/default/objects/Case/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <formula>IF(
 OR(
   CONTAINS(Opportunity__r.RecordType.DeveloperName, 'FRPSA'),
   AND(
     CONTAINS(Opportunity__r.Lender_Account__r.Name, 'Quick Bridge'),
     Contract__r.Product_Type__c = 'FRPSA'
     )
    ),
  'FRPSA',

IF( 
 CONTAINS(Opportunity__r.RecordType.DeveloperName, 'Lease'),
  'Lease',

IF(
  OR(
   CONTAINS(Opportunity__r.RecordType.DeveloperName, 'MLP'),
   AND(
     CONTAINS(Opportunity__r.Lender_Account__r.Name, 'Quick Bridge'),
     ISPICKVAL(Opportunity__r.Actual_Payment_Frequency__c,'Monthly')
     )
    ),
  'MLP',


'Loan'

)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product</label>
    <type>Text</type>
</CustomField>