unpackaged/main/default/objects/Case/fields/Recon_Request_Expires__c.field-meta.xml
<CustomField>
    <fullName>Recon_Request_Expires__c</fullName>
    <label>Recon Request Expires</label>
    <type>Date</type>
</CustomField>