unpackaged/main/default/objects/Case/fields/Refresh_Approved_by__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Approved_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Refresh Approved by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BrokerManagementCases</relationshipName>
    <type>Lookup</type>
</CustomField>