unpackaged/main/default/objects/Case/fields/Renewal_Rep__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Rep__c</fullName>
    <formula>Account.NF_Renewal_Rep__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Rep</label>
    <type>Text</type>
</CustomField>