unpackaged/main/default/objects/Case/fields/Renewed_Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>Renewed_Loan_Number__c</fullName>
    <description>Used for Paid in Full template.</description>
    <label>Renewed Loan Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>