unpackaged/main/default/objects/Case/fields/Repayment__c.field-meta.xml
<CustomField>
    <fullName>Repayment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Repayment</label>
    <referenceTo>cmbls__Repayment__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>