unpackaged/main/default/objects/Case/fields/Repayment_Day_of_Week__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Day_of_Week__c</fullName>
    <description>Repayment Day of Week from Default Repayment Schedule (PD-2295)</description>
    <formula>Repayment__r.Repayment_Day_of_Week__c</formula>
    <inlineHelpText>Repayment Day of Week from Default Repayment Schedule</inlineHelpText>
    <label>Repayment Day of Week</label>
    <type>Text</type>
</CustomField>