unpackaged/main/default/objects/Case/fields/Resume_ACH_Date__c.field-meta.xml
<CustomField>
    <fullName>Resume_ACH_Date__c</fullName>
    <label>Resume ACH Date</label>
    <type>Date</type>
</CustomField>