unpackaged/main/default/objects/Case/fields/RPC__c.field-meta.xml
<CustomField>
    <fullName>RPC__c</fullName>
    <description>Right Party Contact - indicates if contact was made to the customer.</description>
    <inlineHelpText>Right Party Contact - select Yes or No.</inlineHelpText>
    <label>RPC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>