unpackaged/main/default/objects/Case/fields/Sent_to_Accounting_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Accounting_Date__c</fullName>
    <label>Sent to Accounting Date</label>
    <type>DateTime</type>
</CustomField>