unpackaged/main/default/objects/Case/fields/SIC_Code_2__c.field-meta.xml
<CustomField>
    <fullName>SIC_Code_2__c</fullName>
    <formula>Account.Sic</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SIC Code</label>
    <type>Text</type>
</CustomField>