unpackaged/main/default/objects/Case/fields/SOS__c.field-meta.xml
<CustomField>
    <fullName>SOS__c</fullName>
    <label>SOS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Broker_Management_Status</valueSetName>
    </valueSet>
</CustomField>