unpackaged/main/default/objects/Case/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Physical Business Address State</description>
    <formula>Opportunity__r.Addr_Bill1__r.State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State</label>
    <type>Text</type>
</CustomField>