unpackaged/main/default/objects/Case/fields/Stipulations__c.field-meta.xml
<CustomField>
    <fullName>Stipulations__c</fullName>
    <description>Broker Management</description>
    <label>Stipulations</label>
    <type>TextArea</type>
</CustomField>