unpackaged/main/default/objects/Case/fields/Sum_Note__c.field-meta.xml
<CustomField>
    <fullName>Sum_Note__c</fullName>
    <formula>Account.Sum_Note__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sum Note</label>
    <type>Text</type>
</CustomField>