unpackaged/main/default/objects/Case/fields/Third_Party_Debt_Collector__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Debt_Collector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Third Party Debt Collector</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Third Party Debt Collectors</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>