unpackaged/main/default/objects/Case/fields/Total_Payoff__c.field-meta.xml
<CustomField>
    <fullName>Total_Payoff__c</fullName>
    <label>Total Payoff</label>
    <length>30</length>
    <type>Text</type>
</CustomField>