unpackaged/main/default/objects/Case/fields/Trigger_WF__c.field-meta.xml
<CustomField>
    <fullName>Trigger_WF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger WF</label>
    <type>Checkbox</type>
</CustomField>