unpackaged/main/default/objects/Case/fields/Two_Months_Ago__c.field-meta.xml
<CustomField>
    <fullName>Two_Months_Ago__c</fullName>
    <description>Displays name of month two months ago</description>
    <formula>CASE(
MONTH(DATEVALUE(NOW())),
1, "November",
2, "December",
3, "January",
4, "February",
5, "March",
6, "April",
7, "May",
8, "June",
9, "July",
10, "August",
11, "September",
12, "October",
"None")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Two Months Ago</label>
    <type>Text</type>
</CustomField>