unpackaged/main/default/objects/Case/fields/UCC_Filing_Date__c.field-meta.xml
<CustomField>
    <fullName>UCC_Filing_Date__c</fullName>
    <label>UCC Filing Date</label>
    <type>Date</type>
</CustomField>