unpackaged/main/default/objects/Case/fields/Voided_Check__c.field-meta.xml
<CustomField>
    <fullName>Voided_Check__c</fullName>
    <label>Voided Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Broker_Management_Status</valueSetName>
    </valueSet>
</CustomField>