unpackaged/main/default/objects/Case/fields/Website_Search__c.field-meta.xml
<CustomField>
    <fullName>Website_Search__c</fullName>
    <label>Website Search</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Broker_Management_Status</valueSetName>
    </valueSet>
</CustomField>