unpackaged/main/default/objects/Case/fields/Welcome_Call__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Welcome Call</label>
    <referenceTo>Welcome_Call__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>