unpackaged/main/default/objects/Case/fields/Wire_Date__c.field-meta.xml
<CustomField>
    <fullName>Wire_Date__c</fullName>
    <label>Wire Date</label>
    <type>Date</type>
</CustomField>