unpackaged/main/default/objects/Case/fields/X3rd_Party_Debt_Collector__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Debt_Collector__c</fullName>
    <formula>Account.X3rd_Party_Debt_Collector__r.Name</formula>
    <label>3rd Party Debt Collector</label>
    <type>Text</type>
</CustomField>