unpackaged/main/default/objects/Case/recordTypes/Accounting.recordType-meta.xml
<RecordType>
    <fullName>Accounting</fullName>
    <active>true</active>
    <businessProcess>Accounting</businessProcess>
    <description>Cases to be handled by the Accounting department</description>
    <label>Accounting</label>
</RecordType>