unpackaged/main/default/objects/Case/recordTypes/ACH_Bounce.recordType-meta.xml
<RecordType>
    <fullName>ACH_Bounce</fullName>
    <active>true</active>
    <businessProcess>ACH Bounce</businessProcess>
    <description>For cases created by the ACH Bounce Report process</description>
    <label>ACH Bounce</label>
</RecordType>