unpackaged/main/default/objects/Case/recordTypes/Partner_Management.recordType-meta.xml
<RecordType>
    <fullName>Partner_Management</fullName>
    <active>true</active>
    <businessProcess>Partner Management</businessProcess>
    <description>Broker Management cases related to Broker Accounts</description>
    <label>Partner Management</label>
</RecordType>