unpackaged/main/default/objects/Case/recordTypes/Portfolio_Management.recordType-meta.xml
<RecordType>
    <fullName>Portfolio_Management</fullName>
    <active>true</active>
    <businessProcess>Portfolio Management</businessProcess>
    <description>Cases to be handled by Portfolio Management</description>
    <label>Portfolio Management</label>
</RecordType>