unpackaged/main/default/objects/Case/recordTypes/Salesforce.recordType-meta.xml
<RecordType>
    <fullName>Salesforce</fullName>
    <active>true</active>
    <businessProcess>Salesforce</businessProcess>
    <description>Cases to be handled by a Salesforce Admin</description>
    <label>Salesforce</label>
</RecordType>