unpackaged/main/default/objects/Case/validationRules/Collections_Status_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Collections_Status_Other</fullName>
    <active>false</active>
    <description>Other Description field required if Collections Status = Other
//Deactivated 1/23/23 - AB</description>
    <errorConditionFormula>ISPICKVAL(Collections_Status__c, "Other")&amp;&amp;
ISBLANK(Other__c)</errorConditionFormula>
    <errorDisplayField>Other__c</errorDisplayField>
    <errorMessage>You must enter a description if the Collections Status is Other.</errorMessage>
</ValidationRule>