unpackaged/main/default/objects/Case/validationRules/fraud_status_must_be_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>fraud_status_must_be_selected</fullName>
    <active>true</active>
    <description>Fraud Status must be selected for Case Type = Fraud</description>
    <errorConditionFormula>AND(
ISPICKVAL(Status, 'Closed'),
ISPICKVAL(Type,'Fraud'),
ISPICKVAL( Fraud_Status__c ,'')
)</errorConditionFormula>
    <errorMessage>Fraud Status must be selected</errorMessage>
</ValidationRule>