unpackaged/main/default/objects/Case/validationRules/New_Collections_Case_Status_not_entered.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Collections_Case_Status_not_entered</fullName>
    <active>false</active>
    <description>//Deactivated 1/23/23 - AB</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(TEXT(New_Collections_Stage__c))), 
ISBLANK(TEXT(New_Collections_Status__c))
)</errorConditionFormula>
    <errorMessage>New Collections Status must be filled out when New Collections Stage is changed.</errorMessage>
</ValidationRule>